--- a/package.json
+++ b/package.json
@@ -20,9 +20,8 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@paulmillr/trusted-setups": "^0.1.2",
     "comlink": "^4.4.2",
-    "micro-eth-signer": "^0.14.0",
+    "kzg-wasm": "^0.5.0",
     "workerpool": "^9.2.0"
   },
   "devDependencies": {
