--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "js-kzg",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "license": "MIT",
   "main": "./dist/sdk.cjs.cjs",
   "types": "./dist/sdk.cjs.d.ts",
@@ -16,8 +16,9 @@
     }
   },
   "scripts": {
+    "clean": "rm -rf dist",
     "build": "npm run clean && tsup",
-    "clean": "rm -rf dist"
+    "prepublishOnly": "npm run build"
   },
   "dependencies": {
     "comlink": "^4.4.2",
