--- a/package.json
+++ b/package.json
@@ -21,14 +21,17 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
+    "@paulmillr/trusted-setups": "^0.1.2",
     "comlink": "^4.4.2",
     "kzg-wasm": "^0.5.0",
+    "micro-eth-signer": "^0.14.0",
     "workerpool": "^9.2.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.13",
     "cross-env": "^7.0.3",
+    "http-server": "^14.1.1",
     "jest": "^29.7.0",
     "ts-jest": "^29.3.0",
     "ts-loader": "^9.5.2",
