--- a/package.json
+++ b/package.json
@@ -17,14 +17,18 @@
   },
   "scripts": {
     "clean": "rm -rf dist",
-    "build": "npm run clean && tsup",
-    "prepublishOnly": "npm run build"
+    "build": "npm run clean && npm run build:node && npm run build:browser",
+    "build:node": "tsup",
+    "build:browser": "vite build --config vite.browser.config.js",
+    "prepublishOnly": "npm run build",
+    "test": "vite"
   },
   "files": [
     "dist"
   ],
   "dependencies": {
-    "rust-kzg-node": "^0.3.2"
+    "@napi-rs/wasm-runtime": "^1.0.7",
+    "rust-kzg-node": "^0.4.0"
   },
   "resolutions": {
     "rust-kzg-node-*": "npm:undefined-package@0.0.0-invalid"
@@ -36,10 +40,12 @@
     "cross-env": "^7.0.3",
     "http-server": "^14.1.1",
     "jest": "^29.7.0",
-    "rust-kzg-node-wasm32-wasi": "^0.3.2",
+    "rust-kzg-node-wasm32-wasi": "^0.4.0",
     "ts-jest": "^29.3.0",
     "ts-loader": "^9.5.2",
     "tsup": "^8.5.1",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.2",
+    "vite": "^7.2.4",
+    "vite-plugin-wasm": "^3.5.0"
   }
 }
