--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "js-kzg",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "license": "MIT",
   "main": "./dist/node/sdk.js",
   "types": "./dist/node/sdk.d.ts",
   "exports": {
     ".": {
-      "browser": "./dist/browser/sdk.mjs",
+      "browser": "./dist/browser/sdk.js",
       "node": {
         "import": "./dist/node/sdk.mjs",
         "require": "./dist/node/sdk.js"
@@ -19,7 +19,7 @@
     "clean": "rm -rf dist",
     "build": "npm run clean && npm run build:node && npm run build:browser",
     "build:node": "tsup",
-    "build:browser": "vite build --config vite.browser.config.js",
+    "build:browser": "vite build --config vite.config.js",
     "prepublishOnly": "npm run build",
     "test": "vite"
   },
@@ -27,8 +27,9 @@
     "dist"
   ],
   "dependencies": {
-    "@napi-rs/wasm-runtime": "^1.0.7",
-    "rust-kzg-node": "^0.4.0"
+    "comlink": "^4.4.2",
+    "kzg-wasm": "^1.0.0",
+    "rust-kzg-node": "^1.0.0"
   },
   "resolutions": {
     "rust-kzg-node-*": "npm:undefined-package@0.0.0-invalid"
@@ -40,12 +41,12 @@
     "cross-env": "^7.0.3",
     "http-server": "^14.1.1",
     "jest": "^29.7.0",
-    "rust-kzg-node-wasm32-wasi": "^0.4.0",
     "ts-jest": "^29.3.0",
     "ts-loader": "^9.5.2",
     "tsup": "^8.5.1",
     "typescript": "^5.8.2",
     "vite": "^7.2.4",
+    "vite-plugin-top-level-await": "^1.6.0",
     "vite-plugin-wasm": "^3.5.0"
   }
 }
